--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,10 @@
     "name": "Getting Started Example",
     "version": "1.0",
     "description": "Build an Extension!",
+    "permissions": ["storage"],
+    "background": {
+        "service_worker": "background.js"
+        //"persistent": false
+    },
     "manifest_version": 3
   }
