--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "test_extension",
     "description": "first extension",
-    "version": 1.0,
-    "manifest_version": 2.0, 
+    "version": "0.1.0",
+    "manifest_version": 2, 
     "icons": {
         "128": "./idea.png"
     },
     "background": { //scripts that get executed when the extension is installed or reloaded
-        "scripts:" :["./background.js"]
+        "scripts" :["./background.js"]
     }, 
     "options_page": "./options.html", 
     "browser_action": {
