--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,16 @@
     "name": "test_extension",
     "description": "first extension",
     "version": "0.1.0",
-    "manifest_version": 2, 
+    "manifest_version": 2,
     "icons": {
         "128": "./idea.png"
     },
     "background": { //scripts that get executed when the extension is installed or reloaded
         "scripts" :["./background.js"]
-    }, 
-    "options_page": "./options.html", 
+    },
+    "options_page": "./options.html",
     "browser_action": {
         "default_popup": "popup.html"
     }, //popup page, also called page_action
-    "permissions": ["tabs", "https://www.google.com/*"] //tracks user's tabs, backend, using google as landing page
+    "permissions": ["tabs", "https://www.google.com/*", "storage"] //tracks user's tabs, backend, using google as landing page
 }
